--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px;
+  padding: 30px;
   height: 80px;
 }
 
