--- a/styles/Knowledge.module.css
+++ b/styles/Knowledge.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 0px 40px;
+  padding: 20px 0px;
 }
 
 .container h2 {
